# bellman

./: .gitignore  Cargo.toml  README.md  build.rs  run_diff_windows.sh  run_diff_windows_nightly.sh  run_diff_windows_nightly_futures.sh  run_diff_windows_nightly_with_features.sh  run_insane_lde.sh  run_insane_test.sh  run_insane_test_with_futures.sh
.github/workflows/: ci.yaml
benches/: benchmark_cpu.rs  benchmark_gpu.rs  benchmark_gpu.rs.nocompile
src/: cs.rs  domain.rs  gpulock.rs  group.rs  lib.rs  log.rs  multexp_new.rs  multicore.rs  multicore_new.rs  multiexp.rs  multiexp_experiments.rs  prefetch.rs  singlecore.rs  singlecore_new.rs  source.rs  worker_new.rs
src/gm17/: generator.rs
src/gpu_prover/: mod.rs  utils.rs
src/gpu_prover/cuda_bindings/: async_vec.rs  context.rs  cuda_allocator.rs  device_arithmetic.rs  device_heavy_ops.rs  mod.rs
src/gpu_prover/memory_manager/: copying_operations.rs  mod.rs  polynomial_identifiers.rs  tests.rs
src/gpu_prover/memory_manager/polynomial_operations/: arithmetic.rs  mod.rs  other.rs
src/groth16/: generator.rs  mod.rs  prover.rs
src/groth16_gpu/: mod.rs  prover.rs
src/kate_commitment/: mod.rs
src/plonk/: mod.rs
src/plonk/better_better_cs/: async_cs.rs  async_data_structures.rs  async_polynomials.rs  cs.rs  cs_new.rs  cs_old.rs  data_structures.rs  lookup_tables.rs  mod.rs  selector_optimized_width4_main_gate.rs  utils.rs  width4_main_gate_with_dnext.rs
src/plonk/better_better_cs/cs/: mod.rs  stable.rs  unstable.rs
src/plonk/better_better_cs/data_structures/: mod.rs  stable.rs
src/plonk/better_better_cs/gadgets/: mod.rs  num.rs  rescue.rs
src/plonk/better_better_cs/gates/: main_gate_with_d_next.rs  selector_optimized_with_d_next.rs
src/plonk/better_better_cs/hashes/: mod.rs
src/plonk/better_better_cs/hashes/blake2s/: gadgets.rs  mod.rs  optimized_gadgets.rs  tables.rs  test.rs  utils.rs
src/plonk/better_better_cs/hashes/keccak/: gadgets.rs  mod.rs  tables.rs  test.rs  useful_scripts.py  utils.rs
src/plonk/better_better_cs/hashes/polished_sha256/: gadgets.rs  tables.rs  test.rs  utils.rs
src/plonk/better_better_cs/hashes/sha256/: converters.rs  custom_gates.rs  gadgets.rs  mod.rs  sage_test.py  tables.rs  test.rs  utils.rs
src/plonk/better_better_cs/proof/: async_prover.rs  async_prover_new.rs  cs.rs  data_structures_new.rs  lookup_tables.rs  main_gate_with_d_next.rs  main_gate_with_d_next_new.rs  mod.rs  polynomials_new.rs  selector_optimized_with_d_next.rs  selector_optimized_with_d_next_new.rs  setup.rs  tests.rs  utils.rs  verifier.rs
src/plonk/better_better_cs/redshift/: binary_tree.rs  mod.rs  multioracle.rs  poseidon_tree_hash.rs  prover.rs  setup.rs  tree_hash.rs
src/plonk/better_better_cs/redshift/simple_fri/: mod.rs
src/plonk/better_better_cs/setup/: mod.rs  stable.rs  unstable.rs
src/plonk/better_better_cs/trees/: binary_tree.rs
src/plonk/better_better_cs/verifier/: mod.rs
src/plonk/better_cs/: adaptor.rs  cs.rs  fma_adaptor.rs  generator.rs  keys.rs  keys_old.rs  mod.rs  prover.rs  prover_old.rs  test_assembly.rs  utils.rs  verifier.rs
src/plonk/better_cs/keys/: mod.rs  stable.rs  unstable.rs
src/plonk/better_cs/prover/: mod.rs  prove_steps.rs
src/plonk/blake2_const/benches/bench_multiprocess/src/: main.rs
src/plonk/blake2_const/blake2s/src/: lib.rs
src/plonk/commitments/transcript/: keccak_transcript.rs  mod.rs  poseidon_transcript.rs  rescue_transcript.rs
src/plonk/commitments/transparent/: mod.rs
src/plonk/commitments/transparent/iop/: blake2s_trivial_iop.rs  keccak_trivial_iop.rs
src/plonk/commitments/transparent/iop_compiler/: coset_combining_blake2s_tree.rs
src/plonk/cs/: variable.rs
src/plonk/domains/: mod.rs
src/plonk/fft/: mod.rs  prefetch_lde.rs  recursive_fft.rs  recursive_lde.rs
src/plonk/fft/cooley_tukey_ntt/: mod.rs  partial_reduction.rs
src/plonk/fft/radix_4/: mod.rs
src/plonk/fft/with_precomputation/: fft.rs  lde.rs  mod.rs
src/plonk/plonk/: generator.rs  prover.rs
src/plonk/polynomials/: mod.rs  new.rs  old.rs  sub_vec.rs  tests.rs  unstable.rs
src/plonk/prover/: mod.rs
src/plonk/redshift/: prover.rs
src/plonk/transparent_engine/: impl_macro.rs  mod.rs  proth.rs
src/plonk/verifier/: mod.rs
src/redshift/IOP/FRI/coset_combining_fri/: coset_combiner.rs  fri.rs  mod.rs  query_producer.rs  verifier.rs
src/redshift/IOP/channel/: rescue_channel.rs
src/redshift/IOP/hashes/: mod.rs
src/redshift/IOP/hashes/poseidon/: group_hash.rs  mod.rs  params.rs  specialization.rs
src/redshift/IOP/hashes/rescue/: bn256_rescue_params.rs  mod.rs
src/redshift/IOP/oracle/: coset_combining_blake2s_tree.rs  coset_combining_rescue_tree.rs  coset_combinint_poseidon_tree.rs  mod.rs
src/redshift/fft/: mod.rs
src/redshift/fft/cooley_tukey_ntt/: mod.rs
src/redshift/partial_reduction_field/: impl_macro.rs  mod.rs
src/redshift/polynomials/: mod.rs
src/redshift/redshift/: adaptor.rs  data_structures.rs  generators.rs  hash_count_estimator.sage  mod.rs  prover.rs  serialization.rs  tests.rs  utils.rs  verifier.rs
src/resource_management/: mod.rs  priority_modifier.rs  resources.rs
src/resource_management/routines/: mod.rs  multiexp.rs
src/resource_management/routines/fft/: mod.rs  strided_fft.rs  transpose.rs
src/resource_management/routines/utils/: bitreverse.rs  mod.rs  twiddles.rs
src/resource_management/utils/: mod.rs  rw_lock.rs  signed_digit.rs
src/sonic/: util.rs
src/sonic/helped/: generator.rs  helper.rs
src/sonic/unhelped/: aggregate.rs
src/tests/: dummy_engine.rs
tests/: mimc.rs
(+3 files in other folders)
