[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Alex Vlasov <alex.m.vlasov@gmail.com>", "Alex Gluchowski <alex@gluchowski.net"]
description = "zk-SNARK library"
documentation = "https://github.com/matter-labs/bellman"
homepage = "https://github.com/matter-labs/bellman"
license = "MIT/Apache-2.0"
name = "bellman_ce"
repository = "https://github.com/matter-labs/bellman"
version = "0.3.2"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
rand = "0.4"
bit-vec = "0.6"
cfg-if = "0.1"

# pairing = {package = "pairing_ce", path = "../pairing" }
pairing = {package = "pairing_ce", version = "0.22.*" }
byteorder = "1"

futures= {package = "futures", version = "0.3", default_features = false, features = ["executor"]}
num_cpus = "1"
crossbeam = {version = "0.7", optional = true}

prefetch = {version = "0.2", optional = true}

web-sys = {version = "0.3", optional = true, features = ["console", "Performance", "Window"]}

tiny-keccak = {version = "1.5", optional = true}
blake2-rfc = {version = "0.2.18", optional = true}

blake2s_simd = {version = "0.5", optional = true}
lazy_static = {version = "1", optional = true}

blake2s_const = {version = "0.6", optional = true, path = "./src/plonk/blake2_const/blake2s/"}

# rescue_hash = {git = "https://github.com/shamatar/rescue_hash.git", optional = true }
rescue_hash = {path = "../rescue_hash", optional = true }
poseidon_hash = {path = "../poseidon_hash", optional = true }

hex = "*"

[features]
# default = ["multicore"]
default = ["multicore", "plonk"]
# default = ["multicore", "plonk", "marlin"]
#default = ["multicore", "nightly"]
#default = ["wasm"]
multicore = ["crossbeam", "futures/thread-pool"]
sonic = ["tiny-keccak", "blake2-rfc"]
gm17 = []
nolog = []
plonk = ["blake2s_simd", "lazy_static", "tiny-keccak", "blake2s_const", "rescue_hash", "poseidon_hash"]
marlin = ["blake2s_simd", "tiny-keccak", "blake2s_const"]
wasm = ["web-sys"]
nightly = ["prefetch"]